# backtest_01

./: .gitignore  23d4349e-cc8d-412f-b4d1-2be054cd7042.md  ARCHITECTURE_DEEPDIVE.md  README.md  audit_report_new.md  missing.txt  pyproject.toml
results/: metrics.json
scripts/: dashboard.py  smoke_test.py  smoke_test_full.py  smoke_test_legging.py
src/backtester/: __init__.py
src/backtester/analytics/: __init__.py  metrics.py
src/backtester/core/: clock.py  config.py  engine.py  recorder.py
src/backtester/data/: __init__.py  feed.py  sync.py
src/backtester/events/: __init__.py  queue.py  types.py
src/backtester/execution/: __init__.py  engine.py  fill_model.py  oms.py  slippage.py  transaction_cost.py
src/backtester/instruments/: __init__.py  base.py  bond.py  equity.py  option.py
src/backtester/instruments/stir/: __init__.py  fly.py  outright.py  spread.py
src/backtester/portfolio/: __init__.py  lifecycle.py  margin.py  pnl.py  position.py
src/backtester/pricing/: base.py  bonds.py  options.py
src/backtester/reporting/: __init__.py  tearsheet.py
src/backtester/risk/: __init__.py  budget.py  drawdown.py  post_trade.py  pre_trade.py
src/backtester/sizing/: __init__.py  base.py  vol_target.py
src/backtester/strategy/: __init__.py  base.py  warmup.py
tests/: test_core.py  test_execution.py  test_metrics.py  test_portfolio.py  test_pricing.py  test_risk.py
