[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "can_backtest"
version = "0.1.0"
description = "Professional-grade, event-driven backtesting engine"
authors = [
    {name = "Quant Developer"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scipy>=1.10.0",
    "pyarrow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "plotly>=5.0.0"
]
